--- a/Jenkins/jenkinsfile
+++ b/Jenkins/jenkinsfile
@@ -7,17 +7,17 @@ pipeline{
 
     stages{
         stage("Deployment"){
-            step{
+            steps{
                 echo "Hello World"
             }
         }
         stage("Built"){
             when{
                 expression{
-                    BRANCH_NAME='main'
+                    env.BRANCH_NAME == 'main'
                 }
             }
-            stage{
+            steps{
                 echo "${env.NEW_VARIBLE}"
             }
 
