--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline{
     agent any
     environment{
-         evn.NEW_VARIBLE="GOWSHIK"
+         env.NEW_VARIBLE="GOWSHIK"
          env.BRANCH_NAME='main'
     }
 
