--- a/Jenkinsfile/Jenkinsfile
+++ b/Jenkinsfile/Jenkinsfile
@@ -1,11 +1,11 @@
 pipeline {
-    agent none
+    agent any
 
     stages {
         stage('Build') {
             steps {
                 echo 'Building the project...'
-                
+                // Insert your build commands here (e.g., mvn build, npm install)
                 sh 'echo "Build process complete"'
             }
         }
@@ -13,7 +13,7 @@ pipeline {
         stage('Test') {
             steps {
                 echo 'Running tests...'
-               
+                // Insert your testing commands here (e.g., unit tests, integration tests)
                 sh 'echo "Tests are successful"'
             }
         }
@@ -33,6 +33,9 @@ pipeline {
         }
         success {
             echo 'Pipeline succeeded!'
-        }  
+        }
+        failure {
+            echo 'Pipeline failed!'
+        }
     }
 }
